@@ -979,6 +979,7 @@ sort_elements("transaction",[
 sort_elements("document-link",[
 		"span-title",
 		"description",
+		"language",
 		"span-doc_date",
 		"span-narrative",
 		0]);
